--- a/package.json
+++ b/package.json
@@ -26,9 +26,10 @@
     "typescript": "^4.2.3"
   },
   "scripts": {
+    "sb": "start-storybook -p 6006 -s public",
+    "build-sb": "build-storybook -s public",
     "test": "react-scripts test",
-    "storybook": "start-storybook -p 6006 -s public",
-    "build-storybook": "build-storybook -s public"
+    "lint": "eslint --ext=ts,tsx ./src"
   },
   "eslintConfig": {
     "extends": [
