--- a/package.json
+++ b/package.json
@@ -55,5 +55,15 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "description": "React component library",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/alex-james-vukovity/not-scuffed-component-library.git"
+  },
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/alex-james-vukovity/not-scuffed-component-library/issues"
+  },
+  "homepage": "https://github.com/alex-james-vukovity/not-scuffed-component-library#readme"
 }
