--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -9,8 +9,8 @@ jobs:
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v2
         with:
-          node-version: '14'      
-      - run: npm install
+          node-version: '14'
+      - run: npm ci
       - run: npm run build-sb
       - run: npm run lint
       - run: npm test
