--- a/package.json
+++ b/package.json
@@ -3,14 +3,6 @@
   "author": "Alex James",
   "version": "0.5.1",
   "dependencies": {
-    "@types/styled-components": "^5.1.9",
-    "@types/jest": "^26.0.21",
-    "@types/node": "^12.20.6",
-    "@types/react": "^17.0.3",
-    "@types/react-dom": "^17.0.2",
-    "@testing-library/jest-dom": "^5.11.9",
-    "@testing-library/react": "^11.2.5",
-    "@testing-library/user-event": "^12.8.3",
     "@storybook/addon-actions": "^6.1.21",
     "@storybook/addon-essentials": "^6.1.21",
     "@storybook/addon-links": "^6.1.21",
@@ -18,11 +10,21 @@
     "@storybook/preset-create-react-app": "^3.1.7",
     "@storybook/react": "^6.1.21",
     "babel-plugin-styled-components": "^1.12.0",
-    "prettier": "^2.2.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "styled-components": "^5.2.1"
+  },
+  "devDependencies": {
+    "@testing-library/jest-dom": "^5.11.9",
+    "@testing-library/react": "^11.2.5",
+    "@testing-library/user-event": "^12.8.3",
+    "@types/styled-components": "^5.1.9",
+    "@types/jest": "^26.0.21",
+    "@types/node": "^12.20.6",
+    "@types/react": "^17.0.3",
+    "@types/react-dom": "^17.0.2",
+    "prettier": "^2.2.1",
     "react-scripts": "4.0.3",
-    "styled-components": "^5.2.1",
     "typescript": "^4.2.3"
   },
   "scripts": {
