--- a/package.json
+++ b/package.json
@@ -3,19 +3,25 @@
   "author": "Alex James Vukovity",
   "description": "React component library",
   "version": "0.6.1",
+  "license": "ISC",
+  "homepage": "https://github.com/alex-james-vukovity/not-scuffed-component-library#readme",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/alex-james-vukovity/not-scuffed-component-library.git"
+  },
   "dependencies": {
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
+    "styled-components": "^5.2.1",
+    "babel-plugin-styled-components": "^1.12.0"
+  },
+  "devDependencies": {
     "@storybook/addon-actions": "^6.1.21",
     "@storybook/addon-essentials": "^6.1.21",
     "@storybook/addon-links": "^6.1.21",
     "@storybook/node-logger": "^6.1.21",
     "@storybook/preset-create-react-app": "^3.1.7",
     "@storybook/react": "^6.1.21",
-    "babel-plugin-styled-components": "^1.12.0",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
-    "styled-components": "^5.2.1"
-  },
-  "devDependencies": {
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.8.3",
@@ -58,14 +64,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/alex-james-vukovity/not-scuffed-component-library.git"
-  },
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/alex-james-vukovity/not-scuffed-component-library/issues"
-  },
-  "homepage": "https://github.com/alex-james-vukovity/not-scuffed-component-library#readme"
+  }
 }
