--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@types/react": "^17.0.3",
     "@types/react-dom": "^17.0.2",
     "@types/styled-components": "^5.1.9",
+    "np": "^7.4.0",
     "prettier": "^2.2.1",
     "react-scripts": "4.0.3",
     "typescript": "^4.2.3"
@@ -38,7 +39,8 @@
     "sb": "start-storybook -p 6006 -s public",
     "build-sb": "build-storybook -s public",
     "test": "react-scripts test",
-    "lint": "eslint --ext=ts,tsx ./src"
+    "lint": "eslint --ext=ts,tsx ./src",
+    "release": "np"
   },
   "eslintConfig": {
     "extends": [
