--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@types/react": "^17.0.3",
     "@types/react-dom": "^17.0.2",
     "@types/styled-components": "^5.1.9",
+    "eslint-config-prettier": "^8.1.0",
     "np": "^7.4.0",
     "prettier": "^2.2.1",
     "react-scripts": "4.0.3",
@@ -39,7 +40,9 @@
     "sb": "start-storybook -p 6006 -s public",
     "build-sb": "build-storybook -s public",
     "test": "react-scripts test",
-    "lint": "eslint --ext=ts,tsx ./src",
+    "lint": "eslint .",
+    "format": "prettier --write .",
+    "format-check": "prettier --check .",
     "release": "np"
   },
   "browserslist": {
