--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@types/react-dom": "^17.0.2",
     "@types/styled-components": "^5.1.9",
     "eslint-config-prettier": "^8.1.0",
+    "husky": "^5.2.0",
     "np": "^7.4.0",
     "prettier": "^2.2.1",
     "react-scripts": "4.0.3",
