--- a/package.json
+++ b/package.json
@@ -11,9 +11,7 @@
   },
   "dependencies": {
     "react": "^17.0.1",
-    "react-dom": "^17.0.1",
-    "styled-components": "^5.2.1",
-    "babel-plugin-styled-components": "^1.12.0"
+    "react-dom": "^17.0.1"
   },
   "devDependencies": {
     "@storybook/addon-actions": "^6.1.21",
@@ -30,7 +28,9 @@
     "@types/react": "^17.0.3",
     "@types/react-dom": "^17.0.2",
     "@types/styled-components": "^5.1.9",
+    "babel-plugin-styled-components": "^1.12.0",
     "eslint-config-prettier": "^8.1.0",
+    "styled-components": "^5.2.1",
     "husky": "^5.2.0",
     "np": "^7.4.0",
     "prettier": "^2.2.1",
