--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "@types/react": "^17.0.3",
     "@types/react-dom": "^17.0.2",
     "@types/styled-components": "^5.1.9",
+    "@types/styled-system": "^5.1.10",
     "babel-plugin-styled-components": "^1.12.0",
     "eslint-config-prettier": "^8.1.0",
     "husky": "^5.2.0",
@@ -57,6 +58,7 @@
     "prettier": "^2.2.1",
     "react-scripts": "4.0.3",
     "styled-components": "^5.2.1",
+    "styled-system": "^5.1.5",
     "typescript": "^4.2.3"
   }
 }
