--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "lint": "eslint .",
     "format": "prettier --write .",
     "format-check": "prettier --check .",
-    "release": "np"
+    "release": "np",
+    "prepare": "husky install"
   },
   "browserslist": {
     "production": [
@@ -36,6 +37,8 @@
     "react-dom": "^17.0.1"
   },
   "devDependencies": {
+    "@commitlint/cli": "^12.0.1",
+    "@commitlint/config-conventional": "^12.0.1",
     "@storybook/addon-actions": "^6.1.21",
     "@storybook/addon-essentials": "^6.1.21",
     "@storybook/addon-links": "^6.1.21",
