--- a/package.json
+++ b/package.json
@@ -33,10 +33,6 @@
     ]
   },
   "dependencies": {
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1"
-  },
-  "devDependencies": {
     "@commitlint/cli": "^12.0.1",
     "@storybook/addon-actions": "^6.1.21",
     "@storybook/addon-essentials": "^6.1.21",
@@ -58,6 +54,8 @@
     "husky": "^5.2.0",
     "np": "^7.4.0",
     "prettier": "^2.2.1",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
     "react-scripts": "4.0.3",
     "styled-components": "^5.2.1",
     "styled-system": "^5.1.5",
