--- a/package.json
+++ b/package.json
@@ -32,6 +32,9 @@
       "last 1 safari version"
     ]
   },
+  "resolutions": {
+    "styled-components": "^5"
+  },
   "dependencies": {
     "@commitlint/cli": "^12.0.1",
     "@storybook/addon-actions": "^6.1.21",
@@ -44,6 +47,7 @@
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^13.0.16",
     "@types/jest": "^26.0.21",
+    "@types/lodash": "^4.14.168",
     "@types/node": "^14.14.37",
     "@types/react": "^17.0.3",
     "@types/react-dom": "^17.0.2",
