--- a/package.json
+++ b/package.json
@@ -32,9 +32,6 @@
       "last 1 safari version"
     ]
   },
-  "resolutions": {
-    "styled-components": "^5"
-  },
   "dependencies": {
     "@commitlint/cli": "^12.0.1",
     "@storybook/addon-actions": "^6.1.21",
@@ -64,5 +61,13 @@
     "styled-components": "^5.2.1",
     "styled-system": "^5.1.5",
     "typescript": "^4.2.3"
+  },
+  "peerDependencies": {
+    "react": "^17.0.0",
+    "react-dom": "^17.0.0",
+    "styled-components": "^5.0.0"
+  },
+  "resolutions": {
+    "styled-components": "^5"
   }
 }
