--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "eslint-config-prettier": "^8.1.0",
     "husky": "^6.0.0",
     "np": "^7.4.0",
+    "polished": "^4.1.1",
     "prettier": "^2.2.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
