--- a/.babelrc
+++ b/.babelrc
@@ -1,10 +1,3 @@
 {
-  "plugins": [
-    [
-      "babel-plugin-styled-components",
-      {
-        "pure": true
-      }
-    ]
-  ]
+  "plugins": [["babel-plugin-styled-components"]]
 }
