--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -10,7 +10,7 @@ jobs:
       - uses: actions/setup-node@v2
         with:
           node-version: "14"
-      - run: npm ci
-      - run: npm run build-sb
-      - run: npm run lint
-      - run: npm test
+      - run: yarn
+      - run: yarn build-sb
+      - run: yarn lint
+      - run: yarn test
