config: downgrade storybook and lock the version

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -6,3 +6,7 @@ updates:
       interval: "daily"
     labels: []
     open-pull-requests-limit: 10
+    ignored_updates:
+      - match:
+          dependency_name: "*@storybook/"
+          version_requirement: "6.x"
