--- a/package.json
+++ b/package.json
@@ -34,12 +34,12 @@
   },
   "dependencies": {
     "@commitlint/cli": "^12.0.1",
-    "@storybook/addon-actions": "6.1.0",
-    "@storybook/addon-essentials": "6.1.0",
-    "@storybook/addon-links": "6.1.0",
-    "@storybook/node-logger": "6.1.0",
+    "@storybook/addon-actions": "^6.2.3",
+    "@storybook/addon-essentials": "^6.2.3",
+    "@storybook/addon-links": "^6.2.3",
+    "@storybook/node-logger": "^6.2.3",
     "@storybook/preset-create-react-app": "^3.1.7",
-    "@storybook/react": "6.1.0",
+    "@storybook/react": "^6.2.3",
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^13.0.16",
