config: set url

--- a/package.json
+++ b/package.json
@@ -65,5 +65,8 @@
   },
   "resolutions": {
     "styled-components": "^5"
+  },
+  "publishConfig": {
+    "registry": "https://registry.npmjs.org"
   }
 }
