--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -6,7 +6,6 @@ updates:
       interval: "daily"
     labels: []
     open-pull-requests-limit: 10
-    ignored_updates:
-      - match:
-          dependency_name: "@storybook/*"
-          version_requirement: "6.x"
+    ignore:
+      - dependency-name: "@storybook/*"
+        versions: "6.x"
