--- a/package.json
+++ b/package.json
@@ -34,12 +34,12 @@
   },
   "dependencies": {
     "@commitlint/cli": "^12.0.1",
-    "@storybook/addon-actions": "6.1.5",
-    "@storybook/addon-essentials": "6.1.5",
-    "@storybook/addon-links": "6.1.5",
-    "@storybook/node-logger": "6.1.5",
+    "@storybook/addon-actions": "^6.2.7",
+    "@storybook/addon-essentials": "^6.2.7",
+    "@storybook/addon-links": "^6.2.7",
+    "@storybook/node-logger": "^6.2.7",
     "@storybook/preset-create-react-app": "^3.1.7",
-    "@storybook/react": "6.1.5",
+    "@storybook/react": "^6.2.7",
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^13.0.16",
@@ -51,6 +51,7 @@
     "@types/styled-components": "^5.1.9",
     "@types/styled-system": "^5.1.10",
     "babel-plugin-styled-components": "^1.12.0",
+    "babel-loader": "8.1.0",
     "eslint-config-prettier": "^8.1.0",
     "husky": "^6.0.0",
     "np": "^7.4.0",
