--- a/package.json
+++ b/package.json
@@ -9,7 +9,12 @@
   },
   "license": "ISC",
   "author": "Alex James Vukovity",
+  "main": "dist/index.cjs.js",
+  "module": "dist/index.esm.js",
+  "source": "src/index.ts",
+  "types": "dist/index.d.js",
   "scripts": {
+    "build": "rollup -c",
     "sb": "start-storybook -p 6006 -s public",
     "build-sb": "build-storybook -s public",
     "test": "react-scripts test",
@@ -32,8 +37,16 @@
       "last 1 safari version"
     ]
   },
+  "resolutions": {
+    "styled-components": "^5"
+  },
   "dependencies": {
+    "@babel/cli": "^7.13.14",
+    "@babel/core": "^7.13.15",
+    "@babel/preset-env": "^7.13.15",
+    "@babel/preset-react": "^7.13.13",
     "@commitlint/cli": "^12.0.1",
+    "@rollup/plugin-babel": "^5.3.0",
     "@storybook/addon-actions": "^6.2.7",
     "@storybook/addon-essentials": "^6.2.7",
     "@storybook/addon-links": "^6.2.7",
@@ -60,12 +73,17 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
+    "rollup": "^2.45.1",
+    "rollup-plugin-delete": "^2.0.0",
+    "rollup-plugin-peer-deps-external": "^2.2.4",
+    "rollup-plugin-typescript2": "^0.30.0",
     "styled-components": "^5.2.3",
     "styled-system": "^5.1.5",
     "typescript": "^4.2.3"
   },
-  "resolutions": {
-    "styled-components": "^5"
+  "peerDependencies": {
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2"
   },
   "publishConfig": {
     "registry": "https://registry.npmjs.org"
