--- a/package.json
+++ b/package.json
@@ -47,6 +47,8 @@
     "@babel/preset-react": "^7.13.13",
     "@commitlint/cli": "^12.0.1",
     "@rollup/plugin-babel": "^5.3.0",
+    "@rollup/plugin-commonjs": "^18.0.0",
+    "@rollup/plugin-node-resolve": "^11.2.1",
     "@storybook/addon-actions": "^6.2.7",
     "@storybook/addon-essentials": "^6.2.7",
     "@storybook/addon-links": "^6.2.7",
@@ -74,7 +76,6 @@
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
     "rollup": "^2.45.1",
-    "rollup-plugin-delete": "^2.0.0",
     "rollup-plugin-peer-deps-external": "^2.2.4",
     "rollup-plugin-typescript2": "^0.30.0",
     "styled-components": "^5.2.3",
@@ -83,7 +84,8 @@
   },
   "peerDependencies": {
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "styled-components": "^5.2.3"
   },
   "publishConfig": {
     "registry": "https://registry.npmjs.org"
