--- a/package.json
+++ b/package.json
@@ -9,10 +9,6 @@
   },
   "license": "ISC",
   "author": "Alex James Vukovity",
-  "main": "dist/index.cjs.js",
-  "module": "dist/index.esm.js",
-  "source": "src/index.ts",
-  "types": "dist/index.d.js",
   "scripts": {
     "build": "rollup -c",
     "sb": "start-storybook -p 6006 -s public",
@@ -49,6 +45,7 @@
     "@rollup/plugin-babel": "^5.3.0",
     "@rollup/plugin-commonjs": "^18.0.0",
     "@rollup/plugin-node-resolve": "^11.2.1",
+    "@rollup/plugin-typescript": "^8.2.1",
     "@storybook/addon-actions": "^6.2.7",
     "@storybook/addon-essentials": "^6.2.7",
     "@storybook/addon-links": "^6.2.7",
@@ -77,7 +74,6 @@
     "react-scripts": "4.0.3",
     "rollup": "^2.45.1",
     "rollup-plugin-peer-deps-external": "^2.2.4",
-    "rollup-plugin-typescript2": "^0.30.0",
     "styled-components": "^5.2.3",
     "styled-system": "^5.1.5",
     "typescript": "^4.2.3"
