--- a/package.json
+++ b/package.json
@@ -74,6 +74,7 @@
     "react-scripts": "4.0.3",
     "rollup": "^2.45.1",
     "rollup-plugin-peer-deps-external": "^2.2.4",
+    "rollup-plugin-delete": "^2.0.0",
     "styled-components": "^5.2.3",
     "styled-system": "^5.1.5",
     "typescript": "^4.2.3"
@@ -85,8 +86,5 @@
   },
   "publishConfig": {
     "registry": "https://registry.npmjs.org"
-  },
-  "devDependencies": {
-    "rollup-plugin-delete": "^2.0.0"
   }
 }
