--- a/package.json
+++ b/package.json
@@ -2,6 +2,12 @@
   "name": "not-scuffed-component-library",
   "version": "0.23.0",
   "description": "React component library",
+  "source": "src/index.ts",
+  "main": "dist/index.js",
+  "exports": "./dist/index.modern.js",
+  "module": "dist/index.module.js",
+  "unpkg": "dist/index.umd.js",
+  "types": "dist/index.d.ts",
   "homepage": "https://github.com/alex-james-vukovity/not-scuffed-component-library#readme",
   "repository": {
     "type": "git",
@@ -10,7 +16,7 @@
   "license": "ISC",
   "author": "Alex James Vukovity",
   "scripts": {
-    "build": "rollup -c",
+    "build": "microbundle",
     "sb": "start-storybook -p 6006 -s public",
     "build-sb": "build-storybook -s public",
     "test": "react-scripts test",
@@ -62,6 +68,7 @@
     "babel-plugin-styled-components": "^1.12.0",
     "eslint-config-prettier": "^8.1.0",
     "husky": "^6.0.0",
+    "microbundle": "^0.13.0",
     "np": "^7.4.0",
     "polished": "^4.1.1",
     "prettier": "^2.2.1",
